<resources>
    <string name="app_name">DSApp</string>
    <string name="mainMenu_name">Menú Principal</string>
    <string name="registro_name">Crear Nuevo Usuario</string>
    <string name="perfil_name">Perfil</string>
    <string name="monstruos_name">Mis Monstruos</string>
    <string name="ranking_name">Ránking</string>

    <string name="userBox">Username</string>
    <string name="passBox">Password</string>
    <string name="passBox2">Repetir Password</string>
    <string name="mailBox">E-Mail</string>
    <string name="generoSpinner">Género</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="checkBox">Mostrar contraseña</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="MainName">Iniciar Sesión</string>
    <string name="RegistrarName">Crear Nuevo Usuario</string>

    <string name="barraPerfil">Perfil</string>
    <string name="barraMonstruos">Monstruos</string>
    <string name="barraRanking">Ranking</string>
    <string name="barraLogOut">Cerrar Sesión</string>
    <string name="barraCompartir">Comunicación</string>
    <string name="barraShare">Compartir</string>
    <string name="barraSend">Enviar</string>

    <string-array name="genero">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <string name="title_activity_main_menu">Menú Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configuración</string>
</resources>
