<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/barraPerfil" />
        <item
            android:id="@+id/nav_monstruos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/barraMonstruos" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/barraRanking" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/barraLogOut" />
    </group>

    <item android:title="@string/barraCompartir">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/barraShare" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/barraSend" />
        </menu>
    </item>

</menu>
